--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Dinsmore, Elsie (Fictitious character) -- Juvenile fiction'
 - !lcsh 'Christian fiction'
+- GITenberg
 title: Elsie on the Hudson
 url: http://www.gutenberg.org/ebooks/32163
